--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,5 +127,5 @@ jobs:
         run: ng new testapp --package-manager npm --defaults --minimal
 
       - name: ng add apollo-angular
-        run: cd testapp && yarn ng add ../packages/apollo-angular/apollo-angular.tgz --registry http://0.0.0.0:4873 --skip-confirmation --defaults
+        run: cd testapp && ng add ../packages/apollo-angular/apollo-angular.tgz --registry http://0.0.0.0:4873 --skip-confirmation --defaults
 
