--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,5 +70,5 @@ jobs:
         run: ng new testapp --package-manager npm --defaults --minimal
 
       - name: ng add apollo-angular
-        run: cd testapp && ng add ../packages/apollo-angular/apollo-angular.tgz --defaults
+        run: cd testapp && ng add ../packages/apollo-angular/apollo-angular.tgz --defaults --verbose
 
