--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -37,7 +37,7 @@
     "@angular/core": "^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0",
     "@apollo/client": "^3.0.0",
     "graphql": "^14.0.0 || ^15.0.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.0.0 || ^7.0.0",
     "zone.js": ">=0.10.0 <0.12.0"
   },
   "dependencies": {
