Updating with Angular 13 support
- Updating dependencies to support Angular v13.
- Updating Jest.
- Updating Jest testing to work with Angular v13.
- Changing module output in root `tsconfig.json` to produce ES6 code.

NOTE:
I had to skip test 'should run inside Zone' at line 588 in
[packages/apollo-angular/tests/Apollo.spec.ts](packages/apollo-angular/tests/Apollo.spec.ts)
since `rxjs` no longer gives information on operator schedulers.

--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -28,16 +28,16 @@
   "scripts": {
     "build": "ng-packagr -p ng-package.js && yarn build:schematics",
     "build:schematics": "tsc -p schematics/tsconfig.json && node ./scripts/move-schematics.js",
-    "test": "jest --config jest.config.js",
+    "test": "NODE_OPTIONS=--experimental-modules jest --config jest.config.js",
     "prebuild": "rm -rf build/",
     "deploy": "yarn build && npm publish build",
     "deploy:next": "yarn build && npm publish build --tag next"
   },
   "peerDependencies": {
-    "@angular/core": "^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0",
+    "@angular/core": "^9.0.0 || ^10.0.0 || ^11.0.0 || ^12.0.0 || ^13.0.0",
     "@apollo/client": "^3.0.0",
     "graphql": "^14.0.0 || ^15.0.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.0.0 || ^7.0.0",
     "zone.js": ">=0.10.0 <0.12.0"
   },
   "dependencies": {
