Removing `umdModuleIds` from `ng-package` configurations.
- `ng-packagr` no longer supports building UMD modules as of v13.0.0.
  See
  [CHANGELOG](https://github.com/ng-packagr/ng-packagr/blob/master/CHANGELOG.md)

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@angular-devkit/build-angular": "^13.0.2",
     "@angular-devkit/core": "^13.0.0",
     "@angular-devkit/schematics": "^13.0.0",
     "@angular/animations": "^13.0.0",
