Fixing issues running test suite

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
           key: ${{ github.sha }}
 
       - name: Test
-        run: yarn test
+        run: yarn test --ci
 
   angular:
     name: Test on Angular ${{ matrix.angular_version }}
