Updating with Angular 13 support (#1729)
* Updating with Angular 13 support

- Updating dependencies to support Angular v13.
- Updating Jest.
- Updating Jest testing to work with Angular v13.
- Changing module output in root `tsconfig.json` to produce ES6 code.

NOTE:
I had to skip test 'should run inside Zone' at line 588 in
[packages/apollo-angular/tests/Apollo.spec.ts](packages/apollo-angular/tests/Apollo.spec.ts)
since `rxjs` no longer gives information on operator schedulers.

* Adding testing workflow for Angular 13

* Removing `umdModuleIds` from `ng-package` configurations.

- `ng-packagr` no longer supports building UMD modules as of v13.0.0.
  See
  [CHANGELOG](https://github.com/ng-packagr/ng-packagr/blob/master/CHANGELOG.md)

* Correcting module exports in projects `package.json`s

* Fixing issues running test suite

* Test last 3 versions of Angular

* Update .github/workflows/main.yml

* Update packages/apollo-angular/package.json

Co-authored-by: Kamil Kisiela <kamil.kisiela@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
           key: ${{ github.sha }}
 
       - name: Test
-        run: yarn test
+        run: yarn test --ci
 
   angular:
     name: Test on Angular ${{ matrix.angular_version }}
@@ -82,7 +82,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        angular_version: [9, 10, 11, 12]
+        angular_version: [12, 13]
     steps:
       - name: Use Node.js 14
         uses: actions/setup-node@master
