--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "apollo-angular-monorepo",
   "private": true,
   "license": "MIT",
+  "engines": {
+    "node": ">=14"
+  },
   "scripts": {
     "prebuild": "rimraf packages/*/build/",
     "build": "yarn workspaces run build",
@@ -15,37 +18,44 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@angular-devkit/core": "12.0.1",
-    "@angular-devkit/schematics": "12.0.1",
-    "@angular/animations": "12.0.1",
-    "@angular/common": "12.0.1",
-    "@angular/compiler": "12.0.1",
-    "@angular/compiler-cli": "12.0.1",
-    "@angular/core": "12.0.1",
-    "@angular/platform-browser": "12.0.1",
-    "@angular/platform-browser-dynamic": "12.0.1",
-    "@angular/platform-server": "12.0.1",
+    "@angular-devkit/build-angular": "^13.0.2",
+    "@angular-devkit/core": "^13.0.0",
+    "@angular-devkit/schematics": "^13.0.0",
+    "@angular/animations": "^13.0.0",
+    "@angular/common": "^13.0.0",
+    "@angular/compiler": "^13.0.0",
+    "@angular/compiler-cli": "^13.0.0",
+    "@angular/core": "^13.0.0",
+    "@angular/platform-browser": "^13.0.0",
+    "@angular/platform-browser-dynamic": "^13.0.0",
+    "@angular/platform-server": "^13.0.0",
     "@apollo/client": "3.3.19",
-    "@schematics/angular": "12.0.1",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@schematics/angular": "^13.0.0",
     "@types/extract-files": "8.1.0",
     "@types/jest": "26.0.23",
     "@types/node": "15.6.0",
     "@types/semver": "7.3.6",
+    "babel-jest": "^27.3.1",
+    "browserlist": "^1.0.1",
     "cpx": "1.5.0",
     "graphql": "15.5.0",
-    "jest-zone-patch": "0.0.10",
-    "ng-packagr": "12.0.0",
     "husky": "4.3.8",
-    "jest": "26.6.3",
+    "jest": "^27.0.0",
+    "jest-preset-angular": "^11.0.0-rc.3",
+    "jest-zone-patch": "0.0.10",
     "lint-staged": "11.0.0",
+    "ng-packagr": "^13.0.0",
     "prettier": "2.3.0",
     "react": "17.0.2",
     "rimraf": "3.0.2",
-    "rxjs": "6.6.7",
+    "rxjs": "^7.4.0",
     "shelljs": "0.8.4",
-    "ts-jest": "26.5.6",
-    "typescript": "4.2.4",
-    "zone.js": "0.11.4"
+    "ts-jest": "^27.0.7",
+    "tslib": "^2.3.0",
+    "typescript": "~4.4.4",
+    "zone.js": "~0.11.4"
   },
   "husky": {
     "hooks": {
@@ -61,5 +71,10 @@
     "bracketSpacing": false,
     "singleQuote": true,
     "trailingComma": "all"
-  }
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "maintained node versions"
+  ]
 }
