--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -111,7 +111,7 @@ jobs:
         run: sudo apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
 
       - name: ng add cypress
-        run: (testapp && ng add @cypress/schematic --defaults --verbose --skip-confirmation)
+        run: (cd testapp && ng add @cypress/schematic --defaults --verbose --skip-confirmation)
 
       - name: Update Angular code
         run: ../scripts/prepare-e2e.js testapp
