--- a/website/package.json
+++ b/website/package.json
@@ -11,11 +11,10 @@
     "@docusaurus/plugin-client-redirects": "2.0.0-alpha.72",
     "@docusaurus/plugin-ideal-image": "2.0.0-alpha.72",
     "@docusaurus/preset-classic": "2.0.0-alpha.72",
+    "@theguild/components": "1.8.6",
     "patch-package": "^6.4.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "5.1.0",
-    "the-guild-components": "1.0.13"
+    "react-dom": "17.0.2"
   },
   "browserslist": {
     "production": [
