--- a/package.json
+++ b/package.json
@@ -18,41 +18,40 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.0.2",
-    "@angular-devkit/core": "^13.0.0",
-    "@angular-devkit/schematics": "^13.0.0",
-    "@angular/animations": "^13.0.0",
-    "@angular/common": "^13.0.0",
-    "@angular/compiler": "^13.0.0",
-    "@angular/compiler-cli": "^13.0.0",
-    "@angular/core": "^13.0.0",
-    "@angular/platform-browser": "^13.0.0",
-    "@angular/platform-browser-dynamic": "^13.0.0",
-    "@angular/platform-server": "^13.0.0",
-    "@apollo/client": "3.3.19",
-    "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@schematics/angular": "^13.0.0",
-    "@types/extract-files": "8.1.0",
+    "@angular-devkit/build-angular": "^13.2.3",
+    "@angular-devkit/core": "^13.2.3",
+    "@angular-devkit/schematics": "^13.2.3",
+    "@angular/animations": "^13.2.2",
+    "@angular/common": "^13.2.2",
+    "@angular/compiler": "^13.2.2",
+    "@angular/compiler-cli": "^13.2.2",
+    "@angular/core": "^13.2.2",
+    "@angular/platform-browser": "^13.2.2",
+    "@angular/platform-browser-dynamic": "^13.2.2",
+    "@angular/platform-server": "^13.2.2",
+    "@apollo/client": "3.5.9",
+    "@babel/core": "^7.17.4",
+    "@babel/preset-env": "^7.16.11",
+    "@schematics/angular": "^13.2.3",
+    "@types/extract-files": "8.1.1",
     "@types/jest": "26.0.23",
     "@types/node": "15.6.0",
-    "@types/semver": "7.3.6",
-    "babel-jest": "^27.3.1",
+    "babel-jest": "^27.5.1",
     "browserlist": "^1.0.1",
     "cpx": "1.5.0",
-    "graphql": "15.5.0",
+    "graphql": "16.3.0",
     "husky": "4.3.8",
-    "jest": "^27.0.0",
-    "jest-preset-angular": "^11.0.0-rc.3",
+    "jest": "^27.5.1",
+    "jest-preset-angular": "^11.1.1",
     "jest-zone-patch": "0.0.10",
     "lint-staged": "11.0.0",
-    "ng-packagr": "^13.0.0",
-    "prettier": "2.3.0",
+    "ng-packagr": "^13.2.1",
+    "prettier": "2.5.1",
     "react": "17.0.2",
     "rimraf": "3.0.2",
-    "rxjs": "^7.4.0",
+    "rxjs": "^7.5.4",
     "shelljs": "0.8.4",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^27.1.3",
     "tslib": "^2.3.0",
     "typescript": "~4.4.4",
     "zone.js": "~0.11.4"
