--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -38,13 +38,12 @@
   "peerDependencies": {
     "@angular/core": "^12.0.0 || ^13.0.0",
     "@apollo/client": "^3.0.0",
-    "graphql": "^14.0.0 || ^15.0.0",
+    "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0",
     "rxjs": "^6.0.0 || ^7.0.0",
     "zone.js": ">=0.10.0 <0.12.0"
   },
   "dependencies": {
-    "semver": "^7.0.0",
-    "extract-files": "^9.0.0",
+    "extract-files": "^11.0.0",
     "tslib": "^2.0.0"
   },
   "schematics": "./schematics/collection.json",
