--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@angular/compiler": "^13.2.2",
     "@angular/compiler-cli": "^13.2.2",
     "@angular/core": "^13.2.2",
+    "@angular/cli": "^13.2.2",
     "@angular/platform-browser": "^13.2.2",
     "@angular/platform-browser-dynamic": "^13.2.2",
     "@angular/platform-server": "^13.2.2",
+    "@angular/router": "^13.2.2",
     "@apollo/client": "3.5.9",
     "@babel/core": "^7.17.4",
     "@babel/preset-env": "^7.16.11",
