--- a/packages/demo/tsconfig.json
+++ b/packages/demo/tsconfig.json
@@ -19,8 +19,7 @@
     "module": "es2020",
     "lib": [
       "es2020",
-      "dom",
-      "esnext.asynciterable"
+      "dom"
     ]
   },
   "angularCompilerOptions": {
