--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
-      - name: Use Node.js 14
+      - name: Use Node.js 16
         uses: actions/setup-node@master
         with:
-          node-version: 14
+          node-version: 16
 
       - uses: actions/cache@v2
         name: Cache node_modules
@@ -83,12 +83,13 @@ jobs:
         run: yarn test --ci
 
   angular:
-    name: Test on Angular ${{ matrix.angular_version }}
+    name: Test on Angular ${{ matrix.angular_version }} GraphQL ${{ matrix.graphql_version }}
     needs: build
     runs-on: ubuntu-latest
     strategy:
       matrix:
         angular_version: [12, 13]
+        graphql_version: [15, 16]
     steps:
       - name: Use Node.js 14
         uses: actions/setup-node@master
@@ -114,7 +115,7 @@ jobs:
         run: ng new testapp --package-manager yarn --defaults --minimal --skip-git
 
       - name: ng add apollo-angular
-        run: (cd testapp && ng add ../packages/apollo-angular/apollo-angular.tgz --defaults --verbose --skip-confirmation)
+        run: (cd testapp && ng add ../packages/apollo-angular/apollo-angular.tgz --graphql ${{ matrix.graphql_version }} --defaults --verbose --skip-confirmation)
 
       - name: ng build
         run: (cd testapp && yarn ng run testapp:build:production)
@@ -128,7 +129,7 @@ jobs:
         run: (cd testapp && ng add @cypress/schematic --defaults --verbose --skip-confirmation)
 
       - name: Update Angular code
-        run: ./scripts/prepare-e2e.js testapp
+        run: ./scripts/prepare-e2e.js testapp ${{ matrix.graphql_version }}
 
       - name: ng e2e
         run: (cd testapp && yarn ng run testapp:cypress-run:production)
