--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apollo-angular",
   "description": "Use your GraphQL data in your Angular app, with the Apollo Client",
-  "version": "2.4.0",
+  "version": "3.0.0",
   "author": {
     "name": "Kamil Kisiela",
     "email": "kamil.kisiela@gmail.com",
@@ -38,13 +38,11 @@
   "peerDependencies": {
     "@angular/core": "^12.0.0 || ^13.0.0",
     "@apollo/client": "^3.0.0",
-    "graphql": "^14.0.0 || ^15.0.0",
+    "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0",
     "rxjs": "^6.0.0 || ^7.0.0",
     "zone.js": ">=0.10.0 <0.12.0"
   },
   "dependencies": {
-    "semver": "^7.0.0",
-    "extract-files": "^9.0.0",
     "tslib": "^2.0.0"
   },
   "schematics": "./schematics/collection.json",
