--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -13,7 +13,7 @@
     "node": ">=14"
   },
   "module": "build/fesm2020/ngApollo.mjs",
-  "typings": "build/ngApollo.d.ts",
+  "typings": "build/index.d.ts",
   "homepage": "https://www.apollo-angular.com/",
   "repository": {
     "type": "git",
@@ -28,7 +28,7 @@
     "angular-schematics"
   ],
   "scripts": {
-    "build": "ng-packagr -p ng-package.js && yarn build:schematics",
+    "build": "ng-packagr -p ng-package.json && yarn build:schematics",
     "build:schematics": "tsc -p schematics/tsconfig.json && node ./scripts/move-schematics.js",
     "test": "NODE_OPTIONS=--experimental-modules jest --config jest.config.js",
     "prebuild": "rm -rf build/",
