--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        angular_version: [12, 13]
+        angular_version: [13, 14]
         graphql_version: [15, 16]
     steps:
       - name: Use Node.js 16
@@ -115,7 +115,7 @@ jobs:
         run: ng new testapp --package-manager yarn --defaults --minimal --skip-git
 
       - name: ng add apollo-angular
-        run: (cd testapp && ng add ../packages/apollo-angular/apollo-angular.tgz --graphql ${{ matrix.graphql_version }} --defaults --verbose --skip-confirmation)
+        run: (cd testapp && ng add ../packages/apollo-angular/apollo-angular.tgz --graphql '${{ matrix.graphql_version }}.0.0' --defaults --verbose --skip-confirmation)
 
       - name: ng build
         run: (cd testapp && yarn ng run testapp:build:production)
