--- a/package.json
+++ b/package.json
@@ -14,47 +14,49 @@
     "now-build": "(cd website && yarn && yarn build && mv build ../public)",
     "ci-only:integration": "./scripts/integration tests"
   },
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
+  },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.2.3",
-    "@angular-devkit/core": "^13.2.3",
-    "@angular-devkit/schematics": "^13.2.3",
-    "@angular/animations": "^13.2.2",
-    "@angular/common": "^13.2.2",
-    "@angular/compiler": "^13.2.2",
-    "@angular/compiler-cli": "^13.2.2",
-    "@angular/core": "^13.2.2",
-    "@angular/cli": "^13.2.2",
-    "@angular/platform-browser": "^13.2.2",
-    "@angular/platform-browser-dynamic": "^13.2.2",
-    "@angular/platform-server": "^13.2.2",
-    "@angular/router": "^13.2.2",
-    "@apollo/client": "3.5.9",
+    "@angular-devkit/build-angular": "^14.0.6",
+    "@angular-devkit/core": "^14.0.6",
+    "@angular-devkit/schematics": "^14.0.6",
+    "@angular/animations": "^14.0.6",
+    "@angular/cli": "^14.0.6",
+    "@angular/common": "^14.0.6",
+    "@angular/compiler": "^14.0.6",
+    "@angular/compiler-cli": "^14.0.6",
+    "@angular/core": "^14.0.6",
+    "@angular/platform-browser": "^14.0.6",
+    "@angular/platform-browser-dynamic": "^14.0.6",
+    "@angular/platform-server": "^14.0.6",
+    "@angular/router": "^14.0.6",
+    "@apollo/client": "3.6.9",
     "@babel/core": "^7.17.4",
     "@babel/preset-env": "^7.16.11",
-    "@schematics/angular": "^13.2.3",
-    "@types/jest": "26.0.23",
-    "@types/node": "15.6.0",
-    "babel-jest": "^27.5.1",
+    "@schematics/angular": "^14.0.6",
+    "@types/jest": "28.1.5",
+    "@types/node": "16.11.7",
+    "babel-jest": "^28.1.3",
     "browserlist": "^1.0.1",
     "cpx": "1.5.0",
-    "graphql": "16.3.0",
+    "graphql": "16.5.0",
     "husky": "4.3.8",
-    "jest": "^27.5.1",
-    "jest-preset-angular": "^11.1.1",
+    "jest": "^28.1.3",
+    "jest-preset-angular": "^12.2.0",
     "jest-zone-patch": "0.0.10",
     "lint-staged": "11.0.0",
-    "ng-packagr": "^13.2.1",
-    "prettier": "2.5.1",
+    "ng-packagr": "^14.0.3",
+    "prettier": "2.7.1",
     "react": "17.0.2",
     "rimraf": "3.0.2",
     "rxjs": "^7.5.4",
-    "shelljs": "0.8.4",
-    "ts-jest": "^27.1.3",
+    "shelljs": "0.8.5",
+    "ts-jest": "^28.0.6",
     "tslib": "^2.3.0",
-    "typescript": "~4.4.4",
+    "typescript": "~4.7.4",
     "zone.js": "~0.11.4"
   },
   "husky": {
