--- a/website/package.json
+++ b/website/package.json
@@ -7,7 +7,8 @@
     "algolia-sync": "node scripts/algolia-ci.mjs",
     "build": "next build && next-sitemap --config next-sitemap.config.cjs",
     "dev": "next",
-    "start": "next start"
+    "start": "next start",
+    "test": "echo 'nothing to do here'"
   },
   "dependencies": {
     "@theguild/components": "4.2.1",
