--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "shelljs": "0.8.5",
     "ts-jest": "^28.0.6",
     "tslib": "^2.3.0",
-    "typescript": "~4.7.4",
+    "typescript": "4.8.4",
     "zone.js": "~0.11.4"
   },
   "husky": {
