--- a/website/package.json
+++ b/website/package.json
@@ -5,13 +5,13 @@
   "private": true,
   "scripts": {
     "algolia-sync": "node scripts/algolia-ci.mjs",
-    "build": "next build && next-sitemap --config next-sitemap.config.cjs",
+    "build": "next build && next-sitemap --config next-sitemap.config.cjs && next export",
     "dev": "next",
     "start": "next start",
     "test": "echo 'nothing to do here'"
   },
   "dependencies": {
-    "@theguild/components": "4.2.1",
+    "@theguild/components": "4.2.4",
     "next": "12.3.1",
     "next-sitemap": "3.1.24",
     "react": "18.2.0",
@@ -31,12 +31,12 @@
   },
   "devDependencies": {
     "@theguild/algolia": "1.0.1",
-    "@theguild/tailwind-config": "0.1.1",
-    "@types/node": "18.8.3",
+    "@theguild/tailwind-config": "0.1.3",
+    "@types/node": "18.8.5",
     "@types/react": "18.0.21",
-    "cssnano": "^5.1.13",
+    "cssnano": "5.1.13",
     "patch-package": "6.4.7",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "3.1.8",
     "typescript": "4.8.4"
   }
 }
