zone.js is not a peer dependency
It was introduced a long time ago, but since
74bb06d4497202d0952b4c1657c05713c5228808 we actually
depend on `NgZone` from `@angular/core` instead.

Fixes #1841

--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -39,8 +39,7 @@
     "@angular/core": "^14.0.0",
     "@apollo/client": "^3.0.0",
     "graphql": "^15.0.0 || ^16.0.0",
-    "rxjs": "^6.0.0 || ^7.0.0",
-    "zone.js": ">=0.10.0 <0.12.0"
+    "rxjs": "^6.0.0 || ^7.0.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
