--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        angular_version: [14]
+        angular_version: [14, 15]
         graphql_version: [15, 16]
     steps:
       - name: Use Node.js 16
