--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -36,7 +36,7 @@
     "deploy:next": "yarn build && npm publish build --tag next"
   },
   "peerDependencies": {
-    "@angular/core": "^14.0.0",
+    "@angular/core": "^14.0.0 || ^15.0.0",
     "@apollo/client": "^3.0.0",
     "graphql": "^15.0.0 || ^16.0.0",
     "rxjs": "^6.0.0 || ^7.0.0"
